Fixed more style.  Added javadoc. Added blerny.ppm